# config-best-practice

./: README.md
agentic-coding-in-devcontainer/golang/claudecode/.devcontainer/: Dockerfile  README.md  debian.sources  devcontainer.json  entrypoint.sh  post-create.sh
agentic-coding-in-devcontainer/golang/opencode/.devcontainer/: Dockerfile  devcontainer.json
agentic-coding-in-devcontainer/python/claudecode/: .gitignore  CLAUDE.md  Dockerfile  README.md  devcontainer.json  pyproject.toml  requirements.txt
agentic-coding-in-devcontainer/python/claudecode/.devcontainer/: Dockerfile  README.md  devcontainer.json  entrypoint.sh  post-create.sh
agentic-coding-in-devcontainer/python/kimi/: Dockerfile  devcontainer.json
agentic-coding-in-devcontainer/python/opencode/: Dockerfile  devcontainer.json
haproxy/1.4/: haproxy.cfg
mysql/: my.cnf
oh-my-zsh/: zshrc
vagrant/: Vagrantfile-example
vim/: vimrc
